--- a/thor-android/src/main/res/values/colors.xml
+++ b/thor-android/src/main/res/values/colors.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="shop_list_view_bg">#BB000000</color>
+    <color name="detail_fragment_bg_color">#FFFFFF</color>
 </resources>
